Downgrade everything